--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,39 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
+title: all Is Vanity
+subtitle: all Is Vanity - chasing the wind
+email: feedback@xenizogames.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 16537C #BLU
+  secondary: E5691F #YEL
+  secondary-dark: CFAF2A #OJ
   
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
-  location: Location
-  social: Around the Web
-  credits: Credits
+  copyright: Xenizo Games LLC
+  location: Coming Soon
+  social: Around The Web
+  credits: Xenizo Games
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/XenizoGames
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: https://www.facebook.com/xenizogames
+  - title: google-plus
+    url: https://plus.google.com/s/xenizogames
+  - title: youtube 
+    url: https://www.youtube.com/channel/UCjfIhbBokNbKjqZedNIIIzw
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Early 2015
   
 # Credits content
-credits: 'Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'All Is Vanity - Chasing The Wind is property of <a href="http://xenizogames.com">Xenizo Games LLC</a>.'
 
 # Build settings
 markdown: kramdown
